--- a/front/front.css
+++ b/front/front.css
@@ -1,2 +1,8 @@
  /* Style to display input fields side by side */
- 
+table,
+th,
+td {
+        padding: 10px;
+        border: 1px solid black;
+        border-collapse: collapse;
+}
